--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "-": "^0.0.1",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@koa/router": "^10.1.1",
     "D": "^1.0.0",
     "dotenv": "^10.0.0",
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
+    "require-all": "^3.0.0",
     "winston": "^3.3.3"
   },
   "lint-staged": {
