--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-PORT=1234
-FLEEK_STORAGE_API_KEY=your key
-LOGGER_LEVEL=info
+PORT=1235
+MODULES=fleek
+FLEEK_STORAGE_API_KEY=
+FLEEK_STORAGE_API_SECRET=
+LOGGER_LEVEL=debug
