--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dotenv": "^10.0.0",
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
+    "koa-cors": "^0.0.16",
     "koa-helmet": "^6.1.0",
     "koa-static": "^5.0.0",
     "multer": "^1.4.3",
