feat: add config.metrics.enabled flag

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 PORT=1235
 MODULES=fleek
-FLEEK_STORAGE_API_KEY=
-FLEEK_STORAGE_API_SECRET=
+FLEEK_STORAGE_API_KEY=key
+FLEEK_STORAGE_API_SECRET=secret
+CORS_ORIGIN=true
 LOGGER_LEVEL=debug
+METRICS_ENABLED=true
+UPLOAD_MAX_SIZE=52428800
+JWT_ENABLED=false
+JWT_ACCESS_TOKEN_NAME=access_token
+JWT_PUBLIC_KEY=pem string
