--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@fleekhq/fleek-storage-js": "^1.0.17",
+    "@koa/cors": "^3.1.0",
     "@koa/multer": "^3.0.0",
     "@koa/router": "^10.1.1",
     "D": "^1.0.0",
@@ -46,7 +47,6 @@
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
     "koa-cookie": "^1.0.0",
-    "koa-cors": "^0.0.16",
     "koa-helmet": "^6.1.0",
     "koa-passport": "^4.1.4",
     "koa-static": "^5.0.0",
