fix: module 'koa-cors' -> '@koa/cors'
- add cors config

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,10 @@ MODULES=fleek
 FLEEK_STORAGE_API_KEY=key
 # Required if MODULES value contains 'fleek'
 FLEEK_STORAGE_API_SECRET=secret
+# CORS
 CORS_ORIGIN=true
+CORS_CREDENTIALS=false
+CORS_ALLOW_METHODS=GET,HEAD,PUT,POST,DELETE,PATCH
 LOGGER_LEVEL=debug
 # Set to true to enable '/metrics' endpoint
 METRICS_ENABLED=true
