--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env node src/index.js",
     "start:dev": "cross-env NODE_ENV=dev nodemon --inspect src/index.js",
-    "start:prod": "cross-env NODE_ENV=prod src/index.js",
+    "start:prod": "cross-env NODE_ENV=prod node src/index.js",
     "format": "prettier --write \"src/**/*.js\" \"test/**/*.js\"",
     "test": "cross-env NODE_ENV=test jest --runInBand --forceExit",
     "test:watch": "cross-env NODE_ENV=test jest --runInBand --forceExit --watch",
